Added SonarQube Integration and External GET Api for Greet Message